--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,9 @@
     "name": "lleber/cloud-hook-advanced",
     "version": "1.0.0",
     "description": "An advanced rendition of the cloud-hooks repository focused on automated, predictable, and safe code deployments.",
-    "type": "composer-plugin",
+    "type": "library",
     "require": {
-        "lleber/cloudhook-installer-plugin": "dev-master",
-        "composer-plugin-api": "^1.1"
+        "lleber/cloudhook-installer-plugin": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
