Poke composer file.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "lleber/cloud-hook-advanced",
     "version": "1.0.0",
     "description": "An advanced rendition of the cloud-hooks repository focused on automated, predictable, and safe code deployments.",
-    "type": "library",
+    "type": "lleber-cloudhook",
     "require": {
         "lleber/cloudhook-installer-plugin": "dev-master"
     },
